[package]
name = "sfio-rustls-config"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Configuration routines for Rustls used in Step Function I/O's libraries"
repository = "https://github.com/stepfunc/scursor"
readme = "README.md"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]

[dependencies]
pem = { version = "2.0.0" }
pkcs8 = { version = "0.10.2", features = ["encryption", "pkcs5", "pem", "std"] }
rx509 = "^0.2"
rustls = { version = "^0.21", features = ["dangerous_configuration"] }
rustls-webpki = { version = "^0.100.1" }
zeroize = "1.6.0"

