[package]
name = "sfio-rustls-config"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Configuration routines for Rustls used in libraries from Step Function I/O"
repository = "https://github.com/stepfunc/rustls-config"
readme = "README.md"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]

[dependencies]
pem = { version = "^3.0" }
pkcs8 = { version = "0.10.2", features = ["encryption", "pkcs5", "pem", "std"] }
rx509 = "^0.2"
rustls = { version = "^0.22.1"}
rustls-webpki = { version = "^0.102" }
