[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sfio-rustls-config = { path = "../lib", default-features = false, features = ["crypto-aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
tokio = { version = "1.35.0", features = ["test-util", "net", "rt", "macros"] }

[[test]]
name = "test_verifiers"
path = "src/test_verifiers.rs"


